syntax = "proto3";

package testdata;

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/pomerium/protoutil/test/testdata";

message Message {
  int32  int32_field  = 1;
  int64  int64_field  = 2;
  uint32 uint32_field = 3;
  uint64 uint64_field = 4;
  float  float_field  = 5;
  double double_field = 6;
  bool   bool_field   = 7;
  string string_field = 8;
  bytes  bytes_field  = 9;

  google.protobuf.Any         any_field          = 10;
  google.protobuf.Duration    duration_field     = 11;
  google.protobuf.Timestamp   timestamp_field    = 12;
  google.protobuf.Struct      struct_field       = 13;
  google.protobuf.UInt32Value uint32_value_field = 14;
  google.protobuf.UInt64Value uint64_value_field = 15;
  google.protobuf.Int32Value  int32_value_field  = 16;
  google.protobuf.Int64Value  int64_value_field  = 17;
  google.protobuf.BoolValue   bool_value_field   = 18;
  google.protobuf.StringValue string_value_field = 19;
  google.protobuf.BytesValue  bytes_value_field  = 20;
  Message2                    message_field      = 21;

  repeated float                       float_list        = 22;
  repeated double                      double_list       = 23;
  repeated bool                        bool_list         = 24;
  repeated string                      string_list       = 25;
  repeated bytes                       bytes_list        = 26;
  repeated google.protobuf.Any         any_list          = 27;
  repeated google.protobuf.Duration    duration_list     = 28;
  repeated google.protobuf.Timestamp   timestamp_list    = 29;
  repeated google.protobuf.Struct      struct_list       = 30;
  repeated google.protobuf.UInt32Value uint32_value_list = 31;
  repeated google.protobuf.UInt64Value uint64_value_list = 32;
  repeated google.protobuf.Int32Value  int32_value_list  = 33;
  repeated google.protobuf.Int64Value  int64_value_list  = 34;
  repeated google.protobuf.BoolValue   bool_value_list   = 35;
  repeated google.protobuf.StringValue string_value_list = 36;
  repeated google.protobuf.BytesValue  bytes_value_list  = 37;
  repeated Message2                    message_list      = 38;

  map<int32, bool>                         int32_to_bool          = 39;
  map<int64, string>                       int64_to_string        = 40;
  map<uint32, bytes>                       uint32_to_bytes        = 41;
  map<uint64, google.protobuf.Any>         uint64_to_any          = 42;
  map<bool, Message2>                      bool_to_message        = 43;
  map<string, float>                       string_to_float        = 44;
  map<string, double>                      string_to_double       = 45;
  map<string, bool>                        string_to_bool         = 46;
  map<string, string>                      string_to_string       = 47;
  map<string, bytes>                       string_to_bytes        = 48;
  map<string, google.protobuf.Any>         string_to_any          = 49;
  map<string, google.protobuf.Duration>    string_to_duration     = 50;
  map<string, google.protobuf.Timestamp>   string_to_timestamp    = 51;
  map<string, google.protobuf.Struct>      string_to_struct       = 52;
  map<string, google.protobuf.UInt32Value> string_to_uint32_value = 53;
  map<string, google.protobuf.UInt64Value> string_to_uint64_value = 54;
  map<string, google.protobuf.Int32Value>  string_to_int32_value  = 55;
  map<string, google.protobuf.Int64Value>  string_to_int64_value  = 56;
  map<string, google.protobuf.BoolValue>   string_to_bool_value   = 57;
  map<string, google.protobuf.StringValue> string_to_string_value = 58;
  map<string, google.protobuf.BytesValue>  string_to_bytes_value  = 59;
  map<string, Message2>                    string_to_message      = 60;

  enum Color {
    RED   = 0;
    GREEN = 1;
    BLUE  = 2;
  }

  Color enum_field = 61;

  message NestedMessage {
    message NestedMessage2 {
      message NestedMessage3 {
        int32  nested_int32_field  = 1;
        string nested_string_field = 2;
      }
      enum NestedEnum2 {
        OPTION1 = 0;
      }
    }
    int32              nested_int32_field     = 1;
    string             nested_string_field    = 2;
    repeated bool      nested_bool_list       = 3;
    map<string, int32> nested_string_to_int32 = 4;
    enum NestedEnum {
      OPTION1 = 0;
      OPTION2 = 1;
      OPTION3 = 2;
    }
    NestedEnum nested_enum_field = 5;
  }

  oneof oneof_field {
    int32         oneof_int32_field          = 62;
    string        oneof_string_field         = 63;
    bool          oneof_bool_field           = 64;
    NestedMessage oneof_nested_message_field = 65;
    Message2      oneof_message_field        = 66;
  }
}

// same as Message, but without recursive fields
message Message2 {
  int32  int32_field  = 1;
  int64  int64_field  = 2;
  uint32 uint32_field = 3;
  uint64 uint64_field = 4;
  float  float_field  = 5;
  double double_field = 6;
  bool   bool_field   = 7;
  string string_field = 8;
  bytes  bytes_field  = 9;

  google.protobuf.Any         any_field          = 10;
  google.protobuf.Duration    duration_field     = 11;
  google.protobuf.Timestamp   timestamp_field    = 12;
  google.protobuf.Struct      struct_field       = 13;
  google.protobuf.UInt32Value uint32_value_field = 14;
  google.protobuf.UInt64Value uint64_value_field = 15;
  google.protobuf.Int32Value  int32_value_field  = 16;
  google.protobuf.Int64Value  int64_value_field  = 17;
  google.protobuf.BoolValue   bool_value_field   = 18;
  google.protobuf.StringValue string_value_field = 19;
  google.protobuf.BytesValue  bytes_value_field  = 20;

  repeated float                       float_list        = 22;
  repeated double                      double_list       = 23;
  repeated bool                        bool_list         = 24;
  repeated string                      string_list       = 25;
  repeated bytes                       bytes_list        = 26;
  repeated google.protobuf.Any         any_list          = 27;
  repeated google.protobuf.Duration    duration_list     = 28;
  repeated google.protobuf.Timestamp   timestamp_list    = 29;
  repeated google.protobuf.Struct      struct_list       = 30;
  repeated google.protobuf.UInt32Value uint32_value_list = 31;
  repeated google.protobuf.UInt64Value uint64_value_list = 32;
  repeated google.protobuf.Int32Value  int32_value_list  = 33;
  repeated google.protobuf.Int64Value  int64_value_list  = 34;
  repeated google.protobuf.BoolValue   bool_value_list   = 35;
  repeated google.protobuf.StringValue string_value_list = 36;
  repeated google.protobuf.BytesValue  bytes_value_list  = 37;

  map<int32, bool>                         int32_to_bool          = 39;
  map<int64, string>                       int64_to_string        = 40;
  map<uint32, bytes>                       uint32_to_bytes        = 41;
  map<uint64, google.protobuf.Any>         uint64_to_any          = 42;
  map<bool, google.protobuf.Any>           bool_to_any            = 43;
  map<string, float>                       string_to_float        = 44;
  map<string, double>                      string_to_double       = 45;
  map<string, bool>                        string_to_bool         = 46;
  map<string, string>                      string_to_string       = 47;
  map<string, bytes>                       string_to_bytes        = 48;
  map<string, google.protobuf.Any>         string_to_any          = 49;
  map<string, google.protobuf.Duration>    string_to_duration     = 50;
  map<string, google.protobuf.Timestamp>   string_to_timestamp    = 51;
  map<string, google.protobuf.Struct>      string_to_struct       = 52;
  map<string, google.protobuf.UInt32Value> string_to_uint32_value = 53;
  map<string, google.protobuf.UInt64Value> string_to_uint64_value = 54;
  map<string, google.protobuf.Int32Value>  string_to_int32_value  = 55;
  map<string, google.protobuf.Int64Value>  string_to_int64_value  = 56;
  map<string, google.protobuf.BoolValue>   string_to_bool_value   = 57;
  map<string, google.protobuf.StringValue> string_to_string_value = 58;
  map<string, google.protobuf.BytesValue>  string_to_bytes_value  = 59;

  enum Color {
    RED   = 0;
    GREEN = 1;
    BLUE  = 2;
  }

  Color enum_field = 61;

  message NestedMessage {
    message NestedMessage2 {
      message NestedMessage3 {
        int32  nested_int32_field  = 1;
        string nested_string_field = 2;
      }
      enum NestedEnum2 {
        OPTION1 = 0;
      }
    }
    int32              nested_int32_field     = 1;
    string             nested_string_field    = 2;
    repeated bool      nested_bool_list       = 3;
    map<string, int32> nested_string_to_int32 = 4;
    enum NestedEnum {
      OPTION1 = 0;
      OPTION2 = 1;
      OPTION3 = 2;
    }
    NestedEnum nested_enum_field = 5;
  }

  oneof oneof_field {
    int32         oneof_int32_field          = 62;
    string        oneof_string_field         = 63;
    bool          oneof_bool_field           = 64;
    NestedMessage oneof_nested_message_field = 65;
  }
}

message SampleMessage {
  Sample1FieldMsg field1 = 1;
  Sample2FieldMsg field2 = 2;
  Sample3FieldMsg field3 = 3;
  Sample4FieldMsg field4 = 4;
  Sample5FieldMsg field5 = 5;
  Sample6FieldMsg field6 = 6;

  SampleMessage2 msg = 7;
}

message SampleMessage2 {
  Sample1FieldMsg field1 = 1;
  Sample2FieldMsg field2 = 2;
  Sample3FieldMsg field3 = 3;
  Sample4FieldMsg field4 = 4;
  Sample5FieldMsg field5 = 5;
  Sample6FieldMsg field6 = 6;
}

message Sample1FieldMsg {
  int32 field1 = 1;
}

message Sample2FieldMsg {
  int32 field1 = 1;
  int32 field2 = 2;
}

message Sample3FieldMsg {
  int32 field1 = 1;
  int32 field2 = 2;
  int32 field3 = 3;
}

message Sample4FieldMsg {
  int32 field1 = 1;
  int32 field2 = 2;
  int32 field3 = 3;
  int32 field4 = 4;
}

message Sample5FieldMsg {
  int32 field1 = 1;
  int32 field2 = 2;
  int32 field3 = 3;
  int32 field4 = 4;
  int32 field5 = 5;
}

message Sample6FieldMsg {
  int32 field1 = 1;
  int32 field2 = 2;
  int32 field3 = 3;
  int32 field4 = 4;
  int32 field5 = 5;
  int32 field6 = 6;
}

message Revision {
  optional int64            revision  = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message SampleConfiguration {
  optional bool       enabled       = 1;
  Revision            revision      = 2;
  optional string     stringField   = 3;
  optional bytes      bytesField    = 4;
  map<string, string> mapField      = 5;
  repeated string     repeatedField = 6;
  optional SampleEnum enumField     = 7;
  SampleMessage       messageField  = 8;
}

enum SampleEnum {
  Unknown = 0;
  Foo     = 1;
  Bar     = 2;
}

message Int64Map {
  map<int64, int64> value = 1;
}

message Uint64Map {
  map<uint64, uint64> value = 1;
}

message Int64List {
  repeated int64 value = 1;
}

message Uint64List {
  repeated uint64 value = 1;
}
